Fixed IOS hands shift

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ body {
 .svg-hand {
     width: 100px;
     height: auto;
-    transition: all 3s ease-in-out;
+    transition: transform 3s ease-in-out;
 }
 
 .overlay {
@@ -277,14 +277,16 @@ body {
 
 .left-hand {
     width: 40vw;
-    margin-left: -40vw;
+    margin-left: -80vw;
     transform: translateX(-40vw);
+    /*left: -40vw;*/
     position: relative;
 }
 
 .right-hand {
     width:40vw;
-    margin-right: -40vw;
+    margin-right: -80vw;
+    /*left: 140vw;*/
     transform: translateX(40vw);
     position: relative;
 }
